<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_profile"
        android:src="@drawable/banner2"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/profile"
        android:gravity="center"
        android:textSize="@dimen/h1"
        app:layout_constraintTop_toBottomOf="@id/gl_top"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="@dimen/card_height"
        android:layout_height="@dimen/card_height"
        android:backgroundTint="@color/white"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent
"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/hacker"
                android:layout_margin="@dimen/default_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/nombre"
                android:gravity="center"
                android:layout_margin="@dimen/default_margin"/>
            <TextView
                android:layout_margin="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejemplo_email"
                android:gravity="center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:id="@+id/ll_horario"
        app:layout_constraintTop_toBottomOf="@id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario"
            android:textStyle="bold"
            android:textSize="@dimen/h1"
            android:layout_marginStart="@dimen/default_margin"/>
        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/ll_genres"
        app:layout_constraintTop_toBottomOf="@id/ll_horario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/genres"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/materias"
            android:textStyle="bold"
            android:textSize="@dimen/h1"
            android:layout_marginStart="@dimen/default_margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/ll_genres"
        android:id="@+id/ll_grades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grades"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calificaciones"
            android:textSize="@dimen/h1"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/default_margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/ll_grades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payment"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagos"
            android:textStyle="bold"
            android:textSize="@dimen/h1"
            android:layout_marginStart="@dimen/default_margin"/>
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>